build project structure :: dev

--- a/OpenCV-Vanishing-Point-Detection.ipynb
+++ b/OpenCV-Vanishing-Point-Detection.ipynb
@@ -1,47 +1,303 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "69b04800",
+   "cell_type": "markdown",
+   "id": "451160b9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Vanishing Point Detection  \n",
+    "**Canny + Probabilistic Hough Transform + RANSAC**  \n",
+    "\n",
+    "Classical but still very effective approach for one-point perspective scenes  \n",
+    "(roads, railways, corridors, architecture, etc.)  \n",
+    "\n",
+    "**Pipeline overview:**  \n",
+    "1. Grayscale + strong edge detection (Canny)  \n",
+    "2. Line segment detection (HoughLinesP)  \n",
+    "3. Robust vanishing point estimation via **RANSAC** on line intersections  \n",
+    "\n",
+    "**2025 update notes:**  \n",
+    "Still very useful when you need:  \n",
+    "• interpretable results  \n",
+    "• low compute / no deep learning  \n",
+    "• good initialization for SLAM / calibration / 3D reconstruction"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0746f754",
+   "id": "7a31c6ff",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import os\n",
+    "\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e88b066c",
+   "metadata": {},
+   "source": [
+    "## 1. Load & Prepare Image"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de1b70f3",
+   "id": "894ddb20",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# You can replace with any road / corridor / building interior image\n",
+    "IMAGE_PATHS = [\n",
+    "    \"road.jpg\",                    # your local file\n",
+    "    # \"https://i.ibb.co/yWmY6cz/road.jpg\",\n",
+    "    # \"https://images.unsplash.com/photo-1506905925346-21bda4d32df4\",  # mountain road\n",
+    "    # \"https://images.unsplash.com/photo-1511893736272-2817e2d3e462\",  # long corridor\n",
+    "]\n",
+    "\n",
+    "# For demo we'll assume you have at least one local image\n",
+    "img_path = IMAGE_PATHS[0]\n",
+    "\n",
+    "if not os.path.exists(img_path):\n",
+    "    print(\"Please download an example road image and save it as 'road.jpg'\")\n",
+    "    print(\"Recommended quick sources:\")\n",
+    "    print(\"  • https://i.ibb.co/yWmY6cz/road.jpg\")\n",
+    "    print(\"  • https://unsplash.com/photos/gray-concrete-road-between-green-trees-during-daytime-7u5Mw2H7k2Q\")\n",
+    "else:\n",
+    "    img = cv2.imread(img_path)\n",
+    "    img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
+    "    gray = cv2.cvtColor(img, cv2.COLOR_RGB2GRAY)\n",
+    "\n",
+    "    plt.figure(figsize=(12,6))\n",
+    "    plt.subplot(121), plt.imshow(img), plt.title('Original')\n",
+    "    plt.subplot(122), plt.imshow(gray, cmap='gray'), plt.title('Grayscale')\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3950c66",
+   "metadata": {},
+   "source": [
+    "## 2. Edge Detection (Canny)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69db0405",
+   "id": "72e8cc8e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# ── Most important parameters ───────────────────────────────────────\n",
+    "CANNY_LOW    = 70\n",
+    "CANNY_HIGH   = 180\n",
+    "CANNY_APERTURE = 3\n",
+    "\n",
+    "edges = cv2.Canny(\n",
+    "    gray,\n",
+    "    threshold1 = CANNY_LOW,\n",
+    "    threshold2 = CANNY_HIGH,\n",
+    "    apertureSize = CANNY_APERTURE,\n",
+    "    L2gradient = True\n",
+    ")\n",
+    "\n",
+    "plt.figure(figsize=(10,10))\n",
+    "plt.imshow(edges, cmap='gray')\n",
+    "plt.title('Canny Edges')\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "620f53ce",
+   "metadata": {},
+   "source": [
+    "## 3. Line Detection – Probabilistic Hough Transform"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93e6ebf2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ── HoughLinesP parameters ──────────────────────────────────────────\n",
+    "HOUGH_RHO         = 1\n",
+    "HOUGH_THETA       = np.pi / 180\n",
+    "HOUGH_THRESHOLD   = 90      # min votes\n",
+    "MIN_LINE_LENGTH   = 100\n",
+    "MAX_LINE_GAP      = 15\n",
+    "\n",
+    "lines = cv2.HoughLinesP(\n",
+    "    edges,\n",
+    "    rho        = HOUGH_RHO,\n",
+    "    theta      = HOUGH_THETA,\n",
+    "    threshold  = HOUGH_THRESHOLD,\n",
+    "    minLineLength = MIN_LINE_LENGTH,\n",
+    "    maxLineGap    = MAX_LINE_GAP\n",
+    ")\n",
+    "\n",
+    "print(f\"Detected {len(lines) if lines is not None else 0} line segments\")\n",
+    "\n",
+    "# Visualization\n",
+    "line_img = img.copy()\n",
+    "if lines is not None:\n",
+    "    for [[x1,y1,x2,y2]] in lines:\n",
+    "        cv2.line(line_img, (x1,y1), (x2,y2), (0, 255, 100), 2, cv2.LINE_AA)\n",
+    "\n",
+    "plt.figure(figsize=(12,8))\n",
+    "plt.imshow(line_img)\n",
+    "plt.title('Detected Line Segments')\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bdfb5cd6",
+   "metadata": {},
+   "source": [
+    "## 4. RANSAC-based Vanishing Point Estimation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea354790",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def line_to_homogeneous(x1,y1,x2,y2):\n",
+    "    \"\"\" Line in homogeneous form: ax + by + c = 0 \"\"\"\n",
+    "    a = y1 - y2\n",
+    "    b = x2 - x1\n",
+    "    c = x1*y2 - x2*y1\n",
+    "    return np.array([a, b, c], dtype=float)\n",
+    "\n",
+    "\n",
+    "def intersection(l1, l2, eps=1e-8):\n",
+    "    \"\"\" Intersection point of two lines in homogeneous coordinates \"\"\"\n",
+    "    p = np.cross(l1, l2)\n",
+    "    if abs(p[2]) < eps:\n",
+    "        return None  # parallel / same line\n",
+    "    return p[:2] / p[2]\n",
+    "\n",
+    "\n",
+    "def point_line_distance(point, line):\n",
+    "    \"\"\" Distance from point to line (ax+by+c=0) \"\"\"\n",
+    "    x, y = point\n",
+    "    a, b, c = line\n",
+    "    return abs(a*x + b*y + c) / np.sqrt(a*a + b*b + 1e-10)\n",
+    "\n",
+    "\n",
+    "# Prepare lines in normal form\n",
+    "if lines is None:\n",
+    "    print(\"No lines detected - cannot continue\")\n",
+    "else:\n",
+    "    lines_h = [line_to_homogeneous(x1,y1,x2,y2) for [[x1,y1,x2,y2]] in lines]\n",
+    "\n",
+    "    best_vp = None\n",
+    "    best_inliers = 0\n",
+    "    best_mask = None\n",
+    "\n",
+    "    N_ITERATIONS   = 1200\n",
+    "    INLIER_TH      = 4.0       # pixels\n",
+    "    MIN_INLIERS    = 15\n",
+    "\n",
+    "    n_lines = len(lines_h)\n",
+    "\n",
+    "    for _ in range(N_ITERATIONS):\n",
+    "        idx = np.random.choice(n_lines, 2, replace=False)\n",
+    "        l1, l2 = lines_h[idx[0]], lines_h[idx[1]]\n",
+    "\n",
+    "        vp_candidate = intersection(l1, l2)\n",
+    "        if vp_candidate is None:\n",
+    "            continue\n",
+    "\n",
+    "        # Count inliers\n",
+    "        distances = [point_line_distance(vp_candidate, l) for l in lines_h]\n",
+    "        inliers = np.array(distances) < INLIER_TH\n",
+    "        count = np.sum(inliers)\n",
+    "\n",
+    "        if count > best_inliers:\n",
+    "            best_inliers = count\n",
+    "            best_vp = vp_candidate\n",
+    "            best_mask = inliers\n",
+    "\n",
+    "    print(f\"Best model found with {best_inliers} inliers ({best_inliers/n_lines:.1%})\")\n",
+    "\n",
+    "    # ── Visualization ───────────────────────────────────────────────\n",
+    "    result = img.copy()\n",
+    "\n",
+    "    # Draw all lines (faint)\n",
+    "    for i, [[x1,y1,x2,y2]] in enumerate(lines):\n",
+    "        color = (80,80,255) if not best_mask[i] else (0,220,50)\n",
+    "        cv2.line(result, (x1,y1), (x2,y2), color, 2, cv2.LINE_AA)\n",
+    "\n",
+    "    if best_vp is not None:\n",
+    "        x, y = map(int, best_vp)\n",
+    "        # Draw big red vanishing point\n",
+    "        cv2.circle(result, (x,y), 12, (255,30,30), -1, cv2.LINE_AA)\n",
+    "        cv2.circle(result, (x,y), 18, (255,255,255), 3, cv2.LINE_AA)\n",
+    "\n",
+    "        # Optional: draw lines going through VP (for debug)\n",
+    "        # for l in lines_h:\n",
+    "        #     if point_line_distance(best_vp, l) < INLIER_TH*1.5:\n",
+    "        #         pt = intersection(l, np.array([0,0,1]))  # dummy\n",
+    "        #         if pt is not None:\n",
+    "        #             cv2.line(result, (x,y), tuple(map(int,pt)), (200,200,255), 1)\n",
+    "\n",
+    "    plt.figure(figsize=(14,10))\n",
+    "    plt.imshow(result)\n",
+    "    plt.title(f'Vanishing Point (RANSAC)  –  {best_inliers} inliers')\n",
+    "    plt.axis('off')\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d85d20f",
+   "metadata": {},
+   "source": [
+    "## Quick tuning guide\n",
+    "\n",
+    "| Stage          | Most sensitive parameters                          | Typical range / advice                             |\n",
+    "|---------------|----------------------------------------------------|-----------------------------------------------------|\n",
+    "| Canny         | low/high threshold                                 | low: 50–120, high: 120–250                         |\n",
+    "| HoughP        | threshold, minLineLength, maxLineGap               | threshold 70–140, minLen 60–180, gap 8–25          |\n",
+    "| RANSAC        | inlier threshold (px), nb iterations               | 3–8 pixels, 800–2500 iterations                    |\n",
+    "\n",
+    "Happy vanishing point hunting! 🚗"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "learn",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.12"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
