--- a/OpenCV-Vanishing-Point-Detection.ipynb
+++ b/OpenCV-Vanishing-Point-Detection.ipynb
@@ -5,22 +5,23 @@
    "id": "451160b9",
    "metadata": {},
    "source": [
-    "# Vanishing Point Detection  \n",
-    "**Canny + Probabilistic Hough Transform + RANSAC**  \n",
+    "# Vanishing Point Detection  (_Canny + Probabilistic Hough Transform + RANSAC_)\n",
     "\n",
-    "Classical but still very effective approach for one-point perspective scenes  \n",
-    "(roads, railways, corridors, architecture, etc.)  \n",
+    "Classical but still very effective approach for one-point perspective scenes.Example:\n",
+    "- roads\n",
+    "- railways\n",
+    "- corridors\n",
+    "- architecture\n",
     "\n",
     "**Pipeline overview:**  \n",
-    "1. Grayscale + strong edge detection (Canny)  \n",
-    "2. Line segment detection (HoughLinesP)  \n",
-    "3. Robust vanishing point estimation via **RANSAC** on line intersections  \n",
+    "1. Grayscale + strong edge detection (_Canny_)  \n",
+    "2. Line segment detection (_HoughLinesP_)  \n",
+    "3. Robust vanishing point estimation via `RANSAC` on line intersections  \n",
     "\n",
-    "**2025 update notes:**  \n",
-    "Still very useful when you need:  \n",
+    "**Still very useful when you need:** \n",
     "• interpretable results  \n",
     "• low compute / no deep learning  \n",
-    "• good initialization for SLAM / calibration / 3D reconstruction"
+    "• good initialization for `SLAM` / `calibration` / `3D reconstruction`"
    ]
   },
   {
@@ -31,10 +32,12 @@
    "outputs": [],
    "source": [
     "import cv2\n",
+    "import os\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import os\n",
+    "from tools.tools import LearnTools\n",
     "\n",
+    "learn_tools = LearnTools()\n",
     "%matplotlib inline"
    ]
   },
@@ -53,32 +56,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# You can replace with any road / corridor / building interior image\n",
-    "IMAGE_PATHS = [\n",
-    "    \"road.jpg\",                    # your local file\n",
-    "    # \"https://i.ibb.co/yWmY6cz/road.jpg\",\n",
-    "    # \"https://images.unsplash.com/photo-1506905925346-21bda4d32df4\",  # mountain road\n",
-    "    # \"https://images.unsplash.com/photo-1511893736272-2817e2d3e462\",  # long corridor\n",
-    "]\n",
+    "# Load Image form Image URLs\n",
     "\n",
-    "# For demo we'll assume you have at least one local image\n",
-    "img_path = IMAGE_PATHS[0]\n",
+    "# img_url = \"https://images.unsplash.com/photo-1506905925346-21bda4d32df4\"\n",
+    "img_url = \"https://i.ibb.co.com/BVSYcmyY/joey-kyber-GPxgi4-J82-E4-unsplash.jpg\"\n",
     "\n",
-    "if not os.path.exists(img_path):\n",
-    "    print(\"Please download an example road image and save it as 'road.jpg'\")\n",
-    "    print(\"Recommended quick sources:\")\n",
-    "    print(\"  • https://i.ibb.co/yWmY6cz/road.jpg\")\n",
-    "    print(\"  • https://unsplash.com/photos/gray-concrete-road-between-green-trees-during-daytime-7u5Mw2H7k2Q\")\n",
+    "\n",
+    "\n",
+    "if os.path.exists(\"testImage.jpg\"):\n",
+    "    image = cv2.imread(\"testImage.jpg\")\n",
     "else:\n",
-    "    img = cv2.imread(img_path)\n",
-    "    img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
-    "    gray = cv2.cvtColor(img, cv2.COLOR_RGB2GRAY)\n",
+    "    pil_image = await learn_tools.get_image(\n",
+    "            img_url=img_url,\n",
+    "            padding=0\n",
+    "        )\n",
+    "    pil_image.save(\"testImage.jpg\", \"JPEG\")\n",
+    "    image = learn_tools.pil_to_cv2(pil_image=pil_image)\n",
     "\n",
-    "    plt.figure(figsize=(12,6))\n",
-    "    plt.subplot(121), plt.imshow(img), plt.title('Original')\n",
-    "    plt.subplot(122), plt.imshow(gray, cmap='gray'), plt.title('Grayscale')\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()"
+    "# Convert to grayscale (Equalization is typically performed on single channels)\n",
+    "gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "learn_tools.show_multiple_images(\n",
+    "        image_plotting_data=[\n",
+    "            {'title': 'Original Image', 'image': image},\n",
+    "            {'title': 'Gray Image', 'image': gray, 'cmap': 'gray'}\n",
+    "        ]\n",
+    "    )"
    ]
   },
   {
@@ -97,23 +100,27 @@
    "outputs": [],
    "source": [
     "# ── Most important parameters ───────────────────────────────────────\n",
-    "CANNY_LOW    = 70\n",
+    "CANNY_LOW    = 35\n",
     "CANNY_HIGH   = 180\n",
     "CANNY_APERTURE = 3\n",
     "\n",
     "edges = cv2.Canny(\n",
-    "    gray,\n",
-    "    threshold1 = CANNY_LOW,\n",
-    "    threshold2 = CANNY_HIGH,\n",
-    "    apertureSize = CANNY_APERTURE,\n",
-    "    L2gradient = True\n",
-    ")\n",
+    "        image=gray,\n",
+    "        threshold1 = CANNY_LOW,\n",
+    "        threshold2 = CANNY_HIGH,\n",
+    "        apertureSize = CANNY_APERTURE,\n",
+    "        L2gradient = True\n",
+    "    )\n",
     "\n",
-    "plt.figure(figsize=(10,10))\n",
-    "plt.imshow(edges, cmap='gray')\n",
-    "plt.title('Canny Edges')\n",
-    "plt.axis('off')\n",
-    "plt.show()"
+    "\n",
+    "# Display Result\n",
+    "learn_tools.show_multiple_images(\n",
+    "        image_plotting_data=[\n",
+    "            {'title': 'Original Image', 'image': image},\n",
+    "            {'title': 'Gray Image', 'image': gray, 'cmap': 'gray'},\n",
+    "            {\"title\": \"Canny Edges\", \"image\": edges, \"cmap\": \"gray\"}\n",
+    "        ]\n",
+    "    )"
    ]
   },
   {
@@ -139,27 +146,38 @@
     "MAX_LINE_GAP      = 15\n",
     "\n",
     "lines = cv2.HoughLinesP(\n",
-    "    edges,\n",
-    "    rho        = HOUGH_RHO,\n",
-    "    theta      = HOUGH_THETA,\n",
-    "    threshold  = HOUGH_THRESHOLD,\n",
-    "    minLineLength = MIN_LINE_LENGTH,\n",
-    "    maxLineGap    = MAX_LINE_GAP\n",
-    ")\n",
+    "        image=edges,\n",
+    "        rho= HOUGH_RHO,\n",
+    "        theta= HOUGH_THETA,\n",
+    "        threshold= HOUGH_THRESHOLD,\n",
+    "        minLineLength= MIN_LINE_LENGTH,\n",
+    "        maxLineGap= MAX_LINE_GAP\n",
+    "    )\n",
     "\n",
     "print(f\"Detected {len(lines) if lines is not None else 0} line segments\")\n",
     "\n",
     "# Visualization\n",
-    "line_img = img.copy()\n",
+    "line_img = image.copy()\n",
     "if lines is not None:\n",
     "    for [[x1,y1,x2,y2]] in lines:\n",
-    "        cv2.line(line_img, (x1,y1), (x2,y2), (0, 255, 100), 2, cv2.LINE_AA)\n",
+    "        cv2.line(\n",
+    "            img=line_img,\n",
+    "            pt1=(x1,y1),\n",
+    "            pt2=(x2,y2),\n",
+    "            color=(0, 255, 100),\n",
+    "            thickness=2,\n",
+    "            lineType=cv2.LINE_AA\n",
+    "        )\n",
     "\n",
-    "plt.figure(figsize=(12,8))\n",
-    "plt.imshow(line_img)\n",
-    "plt.title('Detected Line Segments')\n",
-    "plt.axis('off')\n",
-    "plt.show()"
+    "# Display Result\n",
+    "learn_tools.show_multiple_images(\n",
+    "        image_plotting_data=[\n",
+    "            {'title': 'Original Image', 'image': image},\n",
+    "            {'title': 'Gray Image', 'image': gray, 'cmap': 'gray'},\n",
+    "            {\"title\": \"Canny Edges\", \"image\": edges, \"cmap\": \"gray\"},\n",
+    "            {\"title\": \"Detected Line Segments\", \"image\": line_img}\n",
+    "        ]\n",
+    "    )"
    ]
   },
   {
@@ -237,7 +255,7 @@
     "    print(f\"Best model found with {best_inliers} inliers ({best_inliers/n_lines:.1%})\")\n",
     "\n",
     "    # ── Visualization ───────────────────────────────────────────────\n",
-    "    result = img.copy()\n",
+    "    result = image.copy()\n",
     "\n",
     "    # Draw all lines (faint)\n",
     "    for i, [[x1,y1,x2,y2]] in enumerate(lines):\n",
@@ -250,18 +268,17 @@
     "        cv2.circle(result, (x,y), 12, (255,30,30), -1, cv2.LINE_AA)\n",
     "        cv2.circle(result, (x,y), 18, (255,255,255), 3, cv2.LINE_AA)\n",
     "\n",
-    "        # Optional: draw lines going through VP (for debug)\n",
-    "        # for l in lines_h:\n",
-    "        #     if point_line_distance(best_vp, l) < INLIER_TH*1.5:\n",
-    "        #         pt = intersection(l, np.array([0,0,1]))  # dummy\n",
-    "        #         if pt is not None:\n",
-    "        #             cv2.line(result, (x,y), tuple(map(int,pt)), (200,200,255), 1)\n",
     "\n",
-    "    plt.figure(figsize=(14,10))\n",
-    "    plt.imshow(result)\n",
-    "    plt.title(f'Vanishing Point (RANSAC)  –  {best_inliers} inliers')\n",
-    "    plt.axis('off')\n",
-    "    plt.show()"
+    "    # Display Result\n",
+    "    learn_tools.show_multiple_images(\n",
+    "        image_plotting_data=[\n",
+    "            {'title': 'Original Image', 'image': image},\n",
+    "            {'title': 'Gray Image', 'image': gray, 'cmap': 'gray'},\n",
+    "            {\"title\": \"Canny Edges\", \"image\": edges, \"cmap\": \"gray\"},\n",
+    "            {\"title\": \"Detected Line Segments\", \"image\": line_img},\n",
+    "            {\"title\": f'Vanishing Point (RANSAC)  -  {best_inliers} inliers', \"image\": result}\n",
+    "        ]\n",
+    "    )"
    ]
   },
   {
@@ -275,15 +292,13 @@
     "|---------------|----------------------------------------------------|-----------------------------------------------------|\n",
     "| Canny         | low/high threshold                                 | low: 50–120, high: 120–250                         |\n",
     "| HoughP        | threshold, minLineLength, maxLineGap               | threshold 70–140, minLen 60–180, gap 8–25          |\n",
-    "| RANSAC        | inlier threshold (px), nb iterations               | 3–8 pixels, 800–2500 iterations                    |\n",
-    "\n",
-    "Happy vanishing point hunting! 🚗"
+    "| RANSAC        | inlier threshold (px), nb iterations               | 3–8 pixels, 800–2500 iterations                    |"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "learn",
    "language": "python",
    "name": "python3"
   },
@@ -297,7 +312,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
